--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules
+node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -105,4 +105,6 @@ dist
 
 
 #Folder
-database
+database/
+*.csv
+server/db.js
