--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "system design capstone - qaa",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/TeamGenesect-SDC/QAA#readme",
   "dependencies": {
+    "axios": "^0.25.0",
     "express": "^4.17.2",
     "pg": "^8.7.1"
   }
